Finished with the driver and HTTP Flooder. Will work on the UDP flooding when i feel like it

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
-Tutorial3: LOIC++.cpp Flooder.o HTTPFlooder.o XXPFlooder.o 
-	g++ -Wall -o run LOIC++.cpp Flooder.o HTTPFlooder.o XXPFlooder.o -lboost_thread-mt -lboost_date_time
-
+#Tutorial3: LOIC++.cpp Flooder.o HTTPFlooder.o XXPFlooder.o 
+#	g++ -Wall -o loic++ LOIC++.cpp Flooder.o HTTPFlooder.o XXPFlooder.o -lboost_thread-mt -lboost_date_time -lssl -lcrypto -lboost_program_options
+http: LOIC++.cpp Flooder.o HTTPFlooder.o
+	g++ -Wall -o loic++ LOIC++.cpp Flooder.o HTTPFlooder.o -lboost_thread-mt -lboost_date_time -lssl -lcrypto -lboost_program_options
 # now define how each object file is a target and list dependencies and how
 #  to build that object file if any dependencies change
 	
@@ -15,7 +16,7 @@ XXPFlooder.o:	Flooder.o XXPFlooder.h XXPFlooder.cpp
 	g++ -Wall -c XXPFlooder.cpp
 	
 clean:
-	rm  run *.o *.gch
+	rm  loic++ *.o *.gch
 
 
 # that's all
